test/error/syn/nonAssociative.tig
let
    var n := 0
in
    n:= n < n >= n /* cmpOP is non associative */
end
